[gd_scene load_steps=8 format=3 uid="uid://b2os386wnhwja"]

[ext_resource type="Script" path="res://Scripts/Heart.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b8tp4rjxb77ky" path="res://Assets/CommonObjects/heart.png" id="2"]
[ext_resource type="AudioStream" uid="uid://cmebnpx0lt63w" path="res://Assets/Sound/Heart.mp3" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 66.0303

[sub_resource type="Animation" id="2"]
resource_name = "Bounce"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -182), Vector2(0, -54)]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2we0"]
_data = {
"Bounce": SubResource("2"),
"RESET": SubResource("3")
}

[node name="Heart" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 8
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f2we0")
}

[node name="SoundHeart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_Heart_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
